--- a/config.json.template
+++ b/config.json.template
@@ -2,5 +2,6 @@
 	"username": "username",
 	"email": "user@domain.com",
 	"password": "password",
-	"2factorEnabled": false
+	"2factorEnabled": false,
+	"includeVerified": false
 }
