Support TOTP and fix list scrolling

--- a/config.json.template
+++ b/config.json.template
@@ -3,5 +3,7 @@
 	"email": "user@domain.com",
 	"password": "password",
 	"2factorEnabled": false,
+	"OTPEnabled": false,
+	"OTPHash": "",
 	"includeVerified": false
 }
